--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,10 @@ dependencies:
 
 
   cupertino_icons: ^1.0.2
-  geolocator: ^7.7.1
+#  geolocator: ^7.7.1
+  location: ^4.3.0
+  http: ^0.13.4
+  flutter_spinkit: ^5.1.0
 
 dev_dependencies:
   flutter_test:
